--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="stackedit__html"><h1 id="arch-guide">Arch Guide</h1>
 <p>Easy Arch Install with de/wm :- <a href="https://archlinuxgui.in/">ArchGui</a><br>
 Installation Guide:-</p>
-    <a href="Base_Install.html">Page 2</a>
+    <a href="Base_Install.html">Base_Install/Page 1</a>
+    <a href="Post_Install.html">Post_Install/Page 2</a>
 <h2 id="bluetooth">Bluetooth</h2>
 <p>Install-  <code>sudo pacman -S blueman bluez bluez-utils pulseaudio-bluetooth</code><br>
 start- <code>sudo systemctl enable --now bluetooth</code><br>
