--- a/index.html
+++ b/index.html
@@ -9,11 +9,49 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h1 id="arch-guide">Arch Guide</h1>
+  <div class="stackedit__left">
+    <div class="stackedit__toc">
+      
+<ul>
+<li><a href="#arch-guide">Arch Guide</a>
+<ul>
+<li><a href="#bluetooth">Bluetooth</a></li>
+</ul>
+</li>
+<li><a href="#unable-to-mount-hard-drives">unable to mount hard drives</a></li>
+<li><a href="#slow-download-speed-using-pacman">Slow download speed using pacman</a></li>
+<li><a href="#i3-gaps-picom-screen-tearing-issue."> i3-gaps picom screen tearing issue.</a></li>
+<li><a href="#thunar-“open-with”-doesn’t-work-for-terminal-applications">Thunar “open with” doesn’t work for terminal applications</a></li>
+<li><a href="#thunar---custom-actions-open-terminal-here-not-working">Thunar - Custom Actions [open terminal here not working]</a>
+<ul>
+<li><a href="#adding-a-custom-action">Adding a Custom Action</a></li>
+</ul>
+</li>
+<li><a href="#easter-egg-pacman-ilovecandy">Easter egg [pacman ILoveCandy]</a>
+<ul>
+<li><a href="#bashrc-shell-prompt-color-and-icon-change">Bashrc Shell Prompt Color and Icon Change</a></li>
+</ul>
+</li>
+<li><a href="#lightdm----changing-background-imagescolors">LightDM -  Changing background images/colors</a>
+<ul>
+<li>
+<ul>
+<li></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+
+    </div>
+  </div>
+  <div class="stackedit__right">
+    <div class="stackedit__html">
+      <h1 id="arch-guide">Arch Guide</h1>
 <p>Easy Arch Install with de/wm :- <a href="https://archlinuxgui.in/">ArchGui</a><br>
-Installation Guide:-</p>
-    <a href="Base_Install.html">Base_Install/Page 1</a>
-    <a href="Post_Install.html">Post_Install/Page 2</a>
+Installation Guide:-<br>
+<a href="Base_Install.html">Base_Install/Page 1</a><br>
+<a href="Post_Install.html">Post_Install/Page 2</a></p>
 <h2 id="bluetooth">Bluetooth</h2>
 <p>Install-  <code>sudo pacman -S blueman bluez bluez-utils pulseaudio-bluetooth</code><br>
 start- <code>sudo systemctl enable --now bluetooth</code><br>
@@ -106,7 +144,19 @@ $PINK$CYANBG$RED$CYANBG \w $RED$CYAN\n$RESETCOL\
 myPrompt
 unset myPrompt
 </code></pre>
-</div>
+<h1 id="lightdm----changing-background-imagescolors"><a href="Changing%20background%20images/colors">LightDM -  Changing background images/colors</a></h1>
+<p>You can set the background to a hex color or an image. Some greeters offer more robust background options like background selection from the login screen, random backgrounds, etc.</p>
+<h4 id="gtk-greeter">GTK greeter</h4>
+<p>You can use the  <a href="https://archlinux.org/packages/?name=lightdm-gtk-greeter-settings">lightdm-gtk-greeter-settings</a>  gui.</p>
+<p>Users wishing to customize the wallpaper on the greeter screen need to edit  <code>/etc/lightdm/lightdm-gtk-greeter.conf</code>  and define the  <code>background</code>  variable under the  <code>[greeter]</code>  section. For example:</p>
+<p>/etc/lightdm/lightdm-gtk-greeter.conf</p>
+<p>[greeter]<br>
+background=/usr/share/pixmaps/black_and_white_photography-wallpaper-1920x1080.jpg</p>
+<p><strong>Note:</strong>  It is recommended to place the PNG or JPG file in  <code>/usr/share/pixmaps</code>  since the LightDM user needs read access to the wallpaper file.</p>
+<p><img src="https://i.ibb.co/0t2mfNB/Wednesday-30-March-2022-09-02-18-PM-IST.jpg" alt="enter image description here"></p>
+
+    </div>
+  </div>
 </body>
 
 </html>
