--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li></li>
 </ul>
 </li>
+<li><a href="#solved-laptop-not-suspending-on-lid-close">[SOLVED] Laptop not suspending on lid close</a></li>
 </ul>
 </li>
 </ul>
@@ -154,6 +155,14 @@ unset myPrompt
 background=/usr/share/pixmaps/black_and_white_photography-wallpaper-1920x1080.jpg</p>
 <p><strong>Note:</strong>  It is recommended to place the PNG or JPG file in  <code>/usr/share/pixmaps</code>  since the LightDM user needs read access to the wallpaper file.</p>
 <p><img src="https://i.ibb.co/0t2mfNB/Wednesday-30-March-2022-09-02-18-PM-IST.jpg" alt="enter image description here"></p>
+<h2 id="solved-laptop-not-suspending-on-lid-close"><strong><a href="https://bbs.archlinux.org/viewtopic.php?id=205349">[SOLVED] Laptop not suspending on lid close</a></strong></h2>
+<ol>
+<li>hit <code>journal -f</code> or <code>sudo journalctl --unit=systemd-logind --follow</code> to check lid events</li>
+<li>check if lid events are getting detected</li>
+<li>now if you’ve systemd check its logind.conf file</li>
+<li>hit <code>sudo /etc/systemd/logind.conf</code></li>
+<li>Try uncommenting it and explicitely setting its value:- <code>HandleLidSwitch=suspend</code> &amp;&amp; <code>HandleLidSwitchDocked=suspend</code></li>
+</ol>
 
     </div>
   </div>
